	  only 16-bits wide and the SDIO DMA must be set up differently.
	* arch/arm/src/stm32/stm32_dma.c:  Back out the 16-bit DMA change. It
	  is incorrect.
	* configs/:  Make use of UART4/5 vs USART4/5 consistent in all places.
	* Kconfig: Serial 2STOP setting must be integer 0/1, not a boolean.
	* lib/misc/sendfile.c and include/sys/sendfile.h:  Add a Linux style
	  sendfile() (non-standard!)
	* Kconfig: Refactor serial settings (moved from chip to drivers/serial).
	  AVR "teensy" now builds with Kconfig (contributed by Richard Cochran).
	* Kconfig: Add configuration settings for the LPC17xx
	* Kconfig: Add configuration settings for the LM3S (from Richard Cochran).
	* Kconfig: Verify configuration settings for the STM32.  This includes
	  changes in the way that the external SRAM is configured:  Define
	  CONFIG_HEAP2_SIZE (decimal) instead of CONFIG_HEAP2_END (hex).
	* tools/configure.sh:  Don't append the apps directory path setting
	  if the correct setting is already in defined in the defconfig file.
	* fs/fat/fs_utils.c:  Improper constructed bool expression.  This
	  would cause many unnecessary writes to FLASH (Thanks Ronen Vainish).
	* Kconfig: Verify configuration settings for the LPC43xx.  This includes
	  some corrections to configuration variable names and defconfig settings.
	* Kconfig: Add and verify configuration settings for the LPC31xx.
	* arch/arm/src/stm32/stm32_uart.h and stm32_serial.c:  Add logic to
	  re-initialize the console UART as needed to enable DMA on the
	  console UART (contributed by Mike Smith).
	* net/recvfrom.c, net/Kconfig, include/nuttx/net/uipopt.h: Remove delay
	  after receiving data.  That has historical reasons to be there (it
	  was needed before read-ahead buffering was added), but kills performance.
	  (Noted by Max Holtzberg).
	* configs/shenzhou:  Add beginnings of a board configuration for the
	  Shenzhou STM32107 board (see www.armjishu.com).  Very little is in
	  place as of this initial check-in.
